Fix alignment of features screenshot
Give more space for  translated text.

Fixes #89

--- a/weblate_web/static/style-rtl.css
+++ b/weblate_web/static/style-rtl.css
@@ -1119,7 +1119,7 @@ a.button.border.rev:hover {
 .interface {
 	background-color: #2A3744;
 	color: #fff;
-	padding: 50px 0 0;
+	padding: 30px 0 0;
 }
 .interface .row {
 	position: relative;
@@ -1133,12 +1133,12 @@ a.button.border.rev:hover {
 	letter-spacing: -1px;
 	line-height: 44px;
 	margin-bottom: 30px;
-    max-width: 330px
+    max-width: 300px
 }
 .inter-checks {
-	width: 450px;
+	width: 500px;
 	position: absolute;
-	top: -105px;
+	top: -85px;
 	left: 20px;
 	color: #BFC3C7;
 	font-size: 26px;
@@ -1148,7 +1148,7 @@ a.button.border.rev:hover {
 }
 .inter-checks  .title {
     float: right;
-    width: 150px;
+    width: 200px;
     padding-top: 80px;
 }
 .inter-context {
