--- a/weblate_web/static/style.css
+++ b/weblate_web/static/style.css
@@ -1122,7 +1122,7 @@ a.button.border.rev:hover {
 .interface {
 	background-color: #2A3744;
 	color: #fff;
-	padding: 50px 0 0;
+	padding: 30px 0 0;
 }
 .interface .row {
 	position: relative;
@@ -1136,12 +1136,12 @@ a.button.border.rev:hover {
 	letter-spacing: -1px;
 	line-height: 44px;
 	margin-bottom: 30px;
-    max-width: 330px
+    max-width: 300px
 }
 .inter-checks {
-	width: 450px;
+	width: 500px;
 	position: absolute;
-	top: -105px;
+	top: -65px;
 	right: 20px;
 	color: #BFC3C7;
 	font-size: 26px;
@@ -1151,7 +1151,7 @@ a.button.border.rev:hover {
 }
 .inter-checks  .title {
     float: left;
-    width: 150px;
+    width: 200px;
     padding-top: 80px;
 }
 .inter-context {
